--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.6",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "daisyui": "^4.12.22",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
