--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "socket.io-client": "^4.8.1",
+    "stu-co": "file:..",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
